--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,36 @@ h1 {
     border: 0px
 }
 
+.subtext h1 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1F2937;
+  padding-top: 40px;
+}
+
+.image_windows {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+
+.box {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #3882f6;
+  border-radius: 10px;
+  width: 150px;
+  height: 150px;
+}
+
+.box_text {
+    width: 150px;
+    padding-top: 8px;
+    text-align: center;
+    font-size: 18px;
+    color: #1F2937;
+}
+
