--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,47 @@ h1 {
 .quote_reference {
     align-self: end;
 }
+
+.advert {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+
+}
+
+.blue_box {
+    background-color: #3882f6;
+    padding: 40px 80px;
+    border-radius: 10px;
+    width: 720px;
+}
+
+.bluebox_content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bluebox_text {
+    color: #F9FAF8;
+}
+
+.bluebox_text .call {
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.bluebox_text .sign_up {
+    font-size: 18px;
+}
+
+.bluebox_content button {
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: bold;
+    background-color: #3882f6;
+    border: 2px solid #F9FAF8;
+    padding: 8px 30px;
+    border-radius: 10px;
+
+}
