--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,9 @@ h1 {
     align-items: center;
     background-color: grey;
     margin-right: 200px;
-    width: 500px
+    width: 500px;
+    color: #E5E7EB;
+    
 }
 
 .left_header {
@@ -148,6 +150,7 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-top: 80px;
+    margin-bottom: 80px;
 
 }
 
@@ -185,4 +188,13 @@ h1 {
     padding: 8px 30px;
     border-radius: 10px;
 
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 40px;
 }
